# easyda

./: README.md  pyproject.toml
.github/workflows/: python-package-conda.yml  test.yml
src/easyda/: __init__.py  data_processing.py  feature_grouping.py  feature_selection.py  modeling.py  mvp.py  mvp_analysis.py  visualization.py
src/easyda.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_data_processing.py  test_feature_selection.py  test_modeling.py  test_mvp.py  test_mvp_analysis.py  test_visualization.py
